--- a/ben5-ejs-form/views/home.ejs
+++ b/ben5-ejs-form/views/home.ejs
@@ -1,2 +1,8 @@
 <%- include('layouts/header.ejs') %>
   <h2>Home</h2>
+  <% singers.forEach(singer=> {%>
+    <b>
+      <%=singer.name%>
+    </b>
+    <br>
+    <%})%>
