--- a/ben5-ejs-form/views/add.ejs
+++ b/ben5-ejs-form/views/add.ejs
@@ -1,2 +1,29 @@
 <%- include('layouts/header.ejs') %>
-  <h2>Add new </h2>
+
+  <div class="row">
+    <div class="col">
+    </div>
+    <div class="col">
+      <br>
+      <h3>Add a new singer</h3>
+      <br>
+
+      <form action="/add" method="post">
+        <div class="mb-3">
+          <label class="form-label">Name</label>
+          <input type="text" class="form-control" name="txtName">
+        </div>
+        <div class="mb-3">
+          <label class="form-label">Avatar</label>
+          <input type="text" class="form-control" name="txtAvatar">
+        </div>
+        <div class="mb-3">
+          <label class="form-label">Link</label>
+          <input type="text" class="form-control" name="txtLink">
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+    </div>
+    <div class="col">
+    </div>
+  </div>
